// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test repository is created 1`] = `
Object {
  "Resources": Object {
    "developtestrepo1152856C2": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "develop-testrepo1",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "developtestrepo272F0705A": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "develop-testrepo2",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "developtestrepo3DC9F216C": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "develop-testrepo3",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "developtestrepo46EE393FB": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "develop-testrepo4",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`snapshot test repository is created 2`] = `
Object {
  "Resources": Object {
    "testrepo1698DDA31": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "testrepo1",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "testrepo27F5B92FC": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "testrepo2",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "testrepo3D48A6826": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "testrepo3",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "testrepo4DD3C7AD7": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "scanOnPush": true,
        },
        "LifecyclePolicy": Object {
          "LifecyclePolicyText": "{\\"rules\\":[{\\"rulePriority\\":1,\\"selection\\":{\\"tagStatus\\":\\"any\\",\\"countType\\":\\"imageCountMoreThan\\",\\"countNumber\\":10},\\"action\\":{\\"type\\":\\"expire\\"}}]}",
        },
        "RepositoryName": "testrepo4",
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
